--- a/diapos/ModuloyGenerador.tex
+++ b/diapos/ModuloyGenerador.tex
@@ -1,4 +1,4 @@
-% Created 2018-04-09 lun 18:25
+% Created 2018-11-18 dom 20:10
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -28,6 +28,7 @@
 \newunit{\wattpeak}{Wp}
 \newunit{\watthour}{Wh}
 \newunit{\amperehour}{Ah}
+\usepackage{steinmetz}
 \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 \beamertemplatenavigationsymbolsempty
@@ -36,28 +37,28 @@
 \usetheme[hideothersubsections]{Goettingen}
 \usecolortheme{rose}
 \usefonttheme{serif}
-\author{Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}}
-\date{}
+\author{Oscar Perpiñán Lamigueiro}
+\date{\url{http://oscarperpinan.github.io}}
 \title{Módulo y Generador}
 \subtitle{Energía Solar Fotovoltaica}
 \hypersetup{
- pdfauthor={Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}},
+ pdfauthor={Oscar Perpiñán Lamigueiro},
  pdftitle={Módulo y Generador},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 25.2.2 (Org mode 9.1.9)}, 
+ pdfcreator={Emacs 25.2.2 (Org mode 9.1.13)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Módulo Fotovoltaico}
-\label{sec:org9c8a6de}
+\label{sec:org3b19948}
 
 \subsection{Introducción}
-\label{sec:orgd1d6720}
+\label{sec:org554e9b7}
 
-\begin{frame}[label={sec:orgbf654af}]{Módulo Fotovoltaico}
+\begin{frame}[label={sec:orga4213b2}]{Módulo Fotovoltaico}
 \begin{itemize}[<+->]
 \item Las características eléctricas de una célula no son suficientes para alimentar las cargas convencionales.
 
@@ -69,7 +70,7 @@
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5c8955f}]{Estructura de un módulo fotovoltaico}
+\begin{frame}[label={sec:org546c21a}]{Estructura de un módulo fotovoltaico}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/panel_fv.png}
 \end{center}
@@ -81,7 +82,7 @@
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7b3a3e2}]{El vidrio frontal}
+\begin{frame}[label={sec:org92cbfdd}]{El vidrio frontal}
 \begin{itemize}[<+->]
 \item Debe tener y mantener una \alert{alta transmisividad} en la banda espectral en la que trabajan las células solares.
 
@@ -94,7 +95,7 @@ la acumulación de suciedad o dificulten la limpieza de ésta mediante la acció
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org15a70fe}]{EVA}
+\begin{frame}[label={sec:orgbb3dd26}]{EVA}
 \begin{itemize}
 \item El \alert{encapsulante a base de EVA}, combinado con un tratamiento en vacío y las capas frontal y posterior, \alert{evita la entrada de humedad}
 en el módulo, señalada como la causa principal de la degradación a largo plazo de módulos fotovoltaicos.
@@ -103,7 +104,7 @@ en el módulo, señalada como la causa principal de la degradación a largo plaz
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgbdb9e83}]{Configuración eléctrica}
+\begin{frame}[label={sec:org3553ab1}]{Configuración eléctrica}
 \begin{itemize}
 \item Una \alert{configuración eléctrica muy común} hasta hace unos años empleaba \alert{36 células en serie} para obtener módulos con potencias comprendidas
 en el rango \(\SIrange[range-phrase=-]{50}{100}{\wattpeak}\) con tensiones en MPP cercanas a los \(\SI{15}{\volt}\) en funcionamiento.
@@ -115,7 +116,7 @@ electrificación rural.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb663cef}]{Norma Internacional IEC 61215}
+\begin{frame}[label={sec:orgb3fab47}]{Norma Internacional IEC 61215}
 \begin{itemize}
 \item Para los módulos compuestos por \alert{células de silicio cristalino} es de aplicación la \alert{norma internacional IEC-61215} \guillemotleft{}Crystalline Silicon
 Terrestrial Photovoltaic (PV) Modules - Design Qualification and Type Approval\guillemotright{}.
@@ -127,9 +128,13 @@ Terrestrial Photovoltaic (PV) Modules - Design Qualification and Type Approval\g
 \end{frame}
 
 \subsection{Modelado de un módulo}
-\label{sec:org07aaab1}
+\label{sec:orgcb21cac}
 
-\begin{frame}[label={sec:orgb59f72b}]{Suposiciones del modelo}
+\begin{frame}[label={sec:orge5b5d91}]{Suposiciones del modelo}
+\[
+I=I_{sc}\cdot(1-\exp(\frac{V-V_{oc}+I\cdot R_{s}}{V_{t}})
+\]
+
 \begin{itemize}[<+->]
 \item Los efectos de la resistencia paralelo son despreciables
 
@@ -137,34 +142,32 @@ Terrestrial Photovoltaic (PV) Modules - Design Qualification and Type Approval\g
 
 \item En cualquier condición de operación \(\exp(\frac{V+I\cdot R_{s}}{V_{t}})\gg1\)
 \end{itemize}
-
-\[
-I=I_{sc}\cdot(1-\exp(\frac{V-V_{oc}+I\cdot R_{s}}{V_{t}})
-\]
 \end{frame}
 
-\begin{frame}[label={sec:org5f7430d}]{Efecto de la radiación y la temperatura}
+
+\begin{frame}[label={sec:orged3445a}]{Efecto de la radiación y la temperatura}
 \begin{itemize}[<+->]
 \item La \alert{corriente de cortocircuito} depende exclusivamente y de forma lineal de la \alert{irradiancia}.
 \end{itemize}
 \[
-I_{sc}=G_{ef}\cdot\frac{I_{sc}^{*}}{G^{*}}
+\boxed{I_{sc}=G_{ef}\cdot\frac{I_{sc}^{*}}{G^{*}}}
 \]
 
 \begin{itemize}
 \item La \alert{tensión de circuito abierto} depende exclusivamente de la \alert{temperatura de \emph{célula}}, y decrece linealmente con ella.
 \end{itemize}
 \[
-V_{oc}(T_{c})=V_{oc}^{*}+(T_{c}-T_{c}^{*})\cdot\frac{dV_{oc}}{dT_{c}}
+\boxed{V_{oc}(T_{c})=V_{oc}^{*}+(T_{c}-T_{c}^{*})\cdot\frac{dV_{oc}}{dT_{c}}}
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org1dde6dc}]{Temperatura de operación de célula}
+\begin{frame}[label={sec:org8928b50}]{Temperatura de operación de célula}
 \begin{itemize}
 \item La \alert{temperatura de operación de la célula} depende de la \alert{temperatura y la irradiación}
 \end{itemize}
-$$T_{c}=T_{a}+G\cdot\frac{NOCT-20}{800}$$
-
+\[
+\boxed{T_{c}=T_{a}+G\cdot\frac{NOCT-20}{800}}
+\]
 \begin{itemize}
 \item Como consecuencia, la \alert{eficiencia decrece} a razón de 0,5\% por grado centigrado.
 
@@ -172,7 +175,7 @@ $$T_{c}=T_{a}+G\cdot\frac{NOCT-20}{800}$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8c4287e}]{TONC}
+\begin{frame}[label={sec:orgf41b258}]{TONC}
 \begin{itemize}
 \item Temperatura que alcanza una \emph{célula} cuando su \emph{módulo} trabaja en las siguientes condiciones:
 
@@ -192,69 +195,69 @@ $$T_{c}=T_{a}+G\cdot\frac{NOCT-20}{800}$$
 
 
 \subsection{Punto Caliente}
-\label{sec:org19c1da1}
+\label{sec:orgc831495}
 
-\begin{frame}[label={sec:org447374b}]{Punto caliente}
+\begin{frame}[label={sec:org1bfe0ce}]{Punto caliente}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AsociacionSerieCelulas.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org065c458}]{Punto caliente}
+\begin{frame}[label={sec:org4e150d7}]{Punto caliente}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TensionCelula_Sombras.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org41ddbf2}]{Punto caliente}
+\begin{frame}[label={sec:orge7aadd6}]{Punto caliente}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PotenciaCelula_Sombra.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge762278}]{Diodo de paso}
+\begin{frame}[label={sec:orgaf41f90}]{Diodo de paso}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AsociacionSerieCelulas_DiodosPaso.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8afc19f}]{Curvas I-V con diodo de paso}
+\begin{frame}[label={sec:orgf377487}]{Curvas I-V con diodo de paso}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/CurvaIV_DiodoPaso.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge101d04}]{Tensión con diodo de paso}
+\begin{frame}[label={sec:orgbab119e}]{Tensión con diodo de paso}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TensionesCelulasDiodos_DiodoPaso.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org6a85255}]{Curvas Potencia con diodo de paso}
+\begin{frame}[label={sec:orge4726ca}]{Curvas Potencia con diodo de paso}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PotenciaCelulas_DiodoPaso.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org3a8442b}]{Curva Módulo con Diodos de Paso}
+\begin{frame}[label={sec:orgfa4ebd3}]{Curva Módulo con Diodos de Paso}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PotenciaModulo.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org413be79}]{Diodos de paso}
+\begin{frame}[label={sec:org3771335}]{Diodos de paso}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AsociacionSerieCelulas_DiodosPasoAlternos.pdf}
 \end{center}
 \end{frame}
 
 \section{Generador Fotovoltaico}
-\label{sec:org5e0e9f2}
+\label{sec:org940480e}
 
 \subsection{Definición}
-\label{sec:orge0be7bf}
+\label{sec:orga65096e}
 
-\begin{frame}[label={sec:org61664ef}]{Generador Fotovoltaico}
+\begin{frame}[label={sec:org237d83a}]{Generador Fotovoltaico}
 \begin{columns}
 \begin{column}{0.7\columnwidth}
 \begin{itemize}[<+->]
@@ -273,7 +276,7 @@ $$T_{c}=T_{a}+G\cdot\frac{NOCT-20}{800}$$
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org3c8f600}]{Ramas y series}
+\begin{frame}[label={sec:orgeb48342}]{Ramas y series}
 \begin{columns}
 \begin{column}{0.7\columnwidth}
 \begin{itemize}
@@ -306,7 +309,7 @@ P_g = N_T \cdot P_m = (N_s \cdot V_{mpp, m}) (N_p \cdot I_{mpp, m})
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org7c408e7}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:orgbac3a12}]{Ejemplo de cálculo}
 Calcular el comportamiento eléctrico de un generador fotovoltaico constituido por 40 módulos, asociados en 4 ramas, bajo la suposición de factor de forma constante.
 
 \begin{itemize}
@@ -319,116 +322,98 @@ Calcular el comportamiento eléctrico de un generador fotovoltaico constituido p
 \end{frame}
 
 \subsection{Pérdidas por dispersión}
-\label{sec:org66b2a15}
+\label{sec:org3e24dd4}
 
-\begin{frame}[label={sec:org11e5924}]{Pérdidas por dispersión}
+\begin{frame}[label={sec:orgb82dd95}]{Pérdidas por dispersión}
 \begin{block}{Definición del problema}
 Los parámetros eléctricos de un módulo FV presentan dispersión: la producción energética será menor que la ideal.
 \end{block}
-\end{frame}
 
-\begin{frame}[label={sec:org3fef190}]{Distribución de valores de corriente y tensión}
-La corriente de máxima potencia de un conjunto de módulos puede caracterizarse por una distribución tipo
-Weibull$$f(I_{mpp})=\alpha\beta^{-\alpha}I_{mpp}^{\alpha-1}exp\left[-\left(\frac{I_{mpp}}{\beta}\right)^{\alpha}\right]$$
-siendo \(\alpha\) el factor de forma y \(\beta\) el factor de escala de la distribución. La eficiencia de conexión serie
-es:$$\eta_{cs}=\frac{I_{mpp}^{r}}{\overline{I_{mpp}}}$$ siendo \(I_{mpp}^{r}\) la corriente de la rama, y \(\overline{I_{mpp}}\) la media
-de las corrientes del grupo de módulos.
-\end{frame}
-
-\begin{frame}[label={sec:org239b0d8}]{Eficiencia de conexión}
+\begin{block}{Eficiencia de conexión}
 \begin{itemize}
-\item A partir de la distribución y la definición de eficiencia de conexión serie puede deducirse que ésta se calcula mediante $$\eta_{cs}=N^{-\frac{1}{\alpha}}$$ siendo N el número de módulos en la serie. Por tanto, \alert{la eficiencia disminuye si aumenta N}. Asimismo, la eficiencia aumenta con \(\alpha\).
+\item Las pérdidas de \alert{dispersión por corriente} (conexión serie en una rama) aumentan con el número de módulos en serie.
 
-\item Por otra parte, puede demostrarse que la \alert{tensión de un grupo de módulos} puede modelarse mediante una función \alert{gaussiana} y que \alert{la dispersión de valores de tensión es suficientemente baja para poder  considerar que la eficiencia de conexión de ramas en paralelo es igual a 1.}
+\item Las pérdidas de \alert{dispersión por tensión} (conexión paralelo entre ramas) es despreciable.
 \end{itemize}
+\end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org05fc55b}]{Clasificación de módulos}
+\begin{frame}[label={sec:orgf067bae}]{Clasificación de módulos}
 \begin{itemize}
-\item La dispersión de un conjunto depende inversamente del valor de
-\(\alpha\), así que un \alert{método para reducir las pérdidas por
-dispersión} consiste en \alert{realizar clasificaciones} de los módulos
-atendiendo a sus valores reales de corriente.
+\item Un \alert{método para reducir las pérdidas por dispersión} consiste en \alert{realizar clasificaciones} de los módulos atendiendo a sus valores reales de corriente.
 
-\item En sistemas de cierta entidad, puede ser conveniente realizar una
-clasificación en tres categorías y crear cada rama con módulos de una
-misma categoría.
+\item Recomendable clasificación en \alert{tres categorías}, conectando en cada rama módulos de una misma categoría.
 
-\item Este método puede suponer reducciones del 2-3\% en las pérdidas
-globales del sistema.
+\item Reducciones del 2-3\% en las pérdidas globales del sistema.
 \end{itemize}
-\end{frame}
 
-\begin{frame}[label={sec:org033709a}]{Pérdidas por dispersión}
 \begin{block}{Problema}
-\begin{itemize}
-\item Las clasificaciones se realizan en base a las médidas realizadas por
-los fabricantes con\guillemotleft{}flash\guillemotright{}.
-
-\item \alert{La indeterminación asociada a este método en relación a las medidas
-a sol real son del mismo rango que la separación entre categorías.}
-\end{itemize}
+\alert{La indeterminación asociada a medidas \guillemotleft{}flash\guillemotright{} son del mismo rango que la separación entre categorías.}
 \end{block}
 \end{frame}
 
 
 \section{Ejemplos de generadores fotovoltaicos}
-\label{sec:org049b803}
+\label{sec:org0897695}
 
-\begin{frame}[label={sec:org7b93a28}]{}
+\begin{frame}[label={sec:org6f52421}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Bifacial.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgddce538}]{}
+\begin{frame}[label={sec:org88c1f28}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/er.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org236bcba}]{}
+\begin{frame}[label={sec:orge02b4de}]{}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/TelefoniaRural.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org1975936}]{}
-\begin{center}
-\includegraphics[width=.9\linewidth]{../figs/clasificacion2.jpg}
-\end{center}
-\end{frame}
-
-\begin{frame}[label={sec:orgf7dded2}]{}
+\begin{frame}[label={sec:orgb29f62e}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/dscf0997.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org6d65a0f}]{}
+\begin{frame}[label={sec:org1ef872e}]{}
 \begin{center}
-\includegraphics[width=.9\linewidth]{../figs/ModulosRotos.jpg}
+\includegraphics[height=0.35\textheight]{../figs/carmona.JPG}
+\end{center}
+
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/carmona_detras.JPG}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf01a37b}]{}
+\begin{frame}[label={sec:org6b70d2f}]{}
+\begin{center}
+\includegraphics[width=\textwidth]{../figs/Forum.JPG}
+\end{center}
+\end{frame}
+
+\begin{frame}[label={sec:org0695364}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/p1010007.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org3afaa60}]{}
+\begin{frame}[label={sec:org8755eca}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/BarreraRuido.jpg}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgc7583d6}]{}
+\begin{frame}[label={sec:orgf7f53bb}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TorreguilInterior2.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org578c379}]{}
+\begin{frame}[label={sec:orgc5da882}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/VistadesdeInterior.jpg}
 \end{center}
