--- a/diapos/RadiacionSolar.tex
+++ b/diapos/RadiacionSolar.tex
@@ -1,4 +1,4 @@
-% Created 2018-11-18 dom 17:30
+% Created 2018-11-20 mar 11:34
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -53,9 +53,9 @@
 \maketitle
 
 \section{Introducción}
-\label{sec:orgf4b380f}
+\label{sec:org6cdf9f8}
 
-\begin{frame}[label={sec:orgf2ca954}]{Radiación Solar y Sistemas Fotovoltaicos}
+\begin{frame}[label={sec:org2e0d5be}]{Radiación Solar y Sistemas Fotovoltaicos}
 \begin{itemize}
 \item La \alert{energía producida} por un sistema fotovoltaico depende principalmente de la \alert{radiación incidente} en el generador.
 
@@ -67,7 +67,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org5405a20}]{La radiación solar no se puede calcular analíticamente}
+\begin{frame}[label={sec:orge2668aa}]{La radiación solar no se puede calcular analíticamente}
 \begin{itemize}
 \item La radiación solar que alcanza la superficie terrestre es el resultado de complejas interacciones en la atmósfera.
 \item Para estimar la radiación se requiere medidas terrestres o imágenes de satélite.
@@ -77,7 +77,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org2f104d1}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:org3607879}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un \alert{ángulo de inclinación positivo} para maximizar el rendimiento.
 \item Este ángulo depende de la \alert{latitud} del lugar y de la \alert{aplicación del sistema}.
@@ -88,7 +88,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgc085208}]{Bases de Datos de Radiación Solar}
+\begin{frame}[label={sec:org12a1824}]{Bases de Datos de Radiación Solar}
 \begin{itemize}
 \item Por tanto, es inviable mantener una base de datos de radiación solar \alert{incidente}.
 \item Las \alert{bases de datos} registran radiación en el \alert{plano horizontal}.
@@ -97,18 +97,18 @@
 \end{frame}
 
 
-\begin{frame}[label={sec:org01836b7}]{Del plano horizontal al plano inclinado}
+\begin{frame}[label={sec:org53ecfe7}]{Del plano horizontal al plano inclinado}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/ProcedimientoCalculoRadiacionInclinada.pdf}
 \end{center}
 \end{frame}
 
 \section{Geometría Sol y Tierra}
-\label{sec:org5f40095}
+\label{sec:org7f4dad4}
 \subsection{Movimiento Sol-Tierra}
-\label{sec:org3f89562}
+\label{sec:org85b025a}
 
-\begin{frame}[label={sec:org5169428}]{Movimiento terrestre}
+\begin{frame}[label={sec:org4827ac3}]{Movimiento terrestre}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
 \end{center}
@@ -130,7 +130,7 @@ eclíptica}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd2ebe7f}]{Movimiento terrestre}
+\begin{frame}[label={sec:orgcefe630}]{Movimiento terrestre}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
 \end{center}
@@ -145,9 +145,9 @@ eclíptica}
 
 
 \subsection{Ángulos Solares}
-\label{sec:org9c115bc}
+\label{sec:orga6a2766}
 
-\begin{frame}[plain,label={sec:org30c98da}]{Ejes terrestres}
+\begin{frame}[plain,label={sec:org41fdb08}]{Ejes terrestres}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{center}
@@ -168,7 +168,7 @@ eclíptica}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org9e88886}]{Declinación}
+\begin{frame}[label={sec:org2b0f2db}]{Declinación}
 \begin{center}
 \includegraphics[height=0.6\textheight]{../figs/Declinacion.pdf}
 \end{center}
@@ -179,7 +179,7 @@ eclíptica}
 \end{frame}
 
 
-\begin{frame}[label={sec:org85308e8}]{Estaciones}
+\begin{frame}[label={sec:org936e15e}]{Estaciones}
 \begin{itemize}[<+->]
 \item \alert{Solsticio de junio} 
 \begin{itemize}[<.->]
@@ -220,7 +220,7 @@ hemisferio Norte.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org12bd358}]{Hora Solar}
+\begin{frame}[label={sec:org33dd4b5}]{Hora Solar}
 \begin{itemize}
 \item \(w\), diferencia entre instante en curso y el mediodía solar (\(w = 0\), \(\psi_s = 0\)).
 \item Criterio de signos: \(w < 0\) antes del mediodía.
@@ -237,13 +237,13 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org191e29a}]{Duración del día}
+\begin{frame}[label={sec:org0eed482}]{Duración del día}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DuracionDia.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[plain,label={sec:orgbc37073}]{Ejes locales}
+\begin{frame}[plain,label={sec:orgc9d15b9}]{Ejes locales}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{center}
@@ -266,7 +266,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc734592}]{Relación entre sistemas de coordenadas}
+\begin{frame}[label={sec:org550beb6}]{Relación entre sistemas de coordenadas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RelacionSistemasCoordenadas.pdf}
 \end{center}
@@ -276,7 +276,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[plain,label={sec:org54352f8}]{Cenit Solar}
+\begin{frame}[plain,label={sec:org12b67d8}]{Cenit Solar}
 \[
 \cos(\theta_{zs}) = \cos(\delta) \cos(\omega) \cos(\phi) + \sin(\delta) \sin(\phi)
 \]
@@ -297,7 +297,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[plain,label={sec:org3f771e3}]{Azimut solar}
+\begin{frame}[plain,label={sec:org767b335}]{Azimut solar}
 \[
   \cos(\psi_{s}) = \mathrm{sign}(\phi) \cdot \frac{\cos(\delta) \cos(\omega) \sin(\phi) - \cos(\phi) \sin(\delta)} {\sin(\theta_{z})}
 \]
@@ -318,21 +318,21 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org4346218}]{Trayectoria Solar (\(60\degree N\))}
+\begin{frame}[label={sec:orgb61c37d}]{Trayectoria Solar (\(60\degree N\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar60N.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org84ff270}]{Trayectoria Solar (\(40\degree S\))}
+\begin{frame}[label={sec:org6a8d352}]{Trayectoria Solar (\(40\degree S\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar40S.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgdea330e}]{Cálculo Ángulos Solares}
+\begin{frame}[label={sec:orgd851efd}]{Cálculo Ángulos Solares}
 \begin{itemize}
 \item Azimut, Ángulo Cenital y Altura Solar, Duración del Dia para el:
 
@@ -351,8 +351,8 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{frame}
 
 \subsection{Hora solar y oficial}
-\label{sec:orgbca83d9}
-\begin{frame}[label={sec:org983cd08}]{Hora solar}
+\label{sec:orgda07d8d}
+\begin{frame}[label={sec:orgc6f7469}]{Hora solar}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{itemize}
@@ -364,7 +364,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga9f8092}]{Hora oficial}
+\begin{frame}[label={sec:org46cfdc1}]{Hora oficial}
 \begin{itemize}
 \item \alert{La hora oficial} es una medida del tiempo \alert{ligada a un meridiano}
 que sirve de referencia para una zona determinada.
@@ -383,7 +383,7 @@ de su huso horario.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgfa6d5c7}]{Tiempo solar medio}
+\begin{frame}[label={sec:org989e0d4}]{Tiempo solar medio}
 \begin{itemize}
 \item \alert{La duración del día solar real}, definido como el tiempo que
 transcurre entre dos pasos consecutivos del Sol por el meridiano
@@ -395,7 +395,7 @@ duración del día solar real.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org3c727d0}]{Ecuación del Tiempo}
+\begin{frame}[label={sec:org277e337}]{Ecuación del Tiempo}
 \[
 \mathrm{EoT}=229.18\cdot\left(-0.0334\cdot\sin(M)+0.04184\cdot\sin\left(2\cdot
       M+3.5884\right)\right)
@@ -408,7 +408,7 @@ M=\frac{2\pi}{365.24}\cdot d_{n}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orga5d79cc}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:orgf0ea867}]{Ejemplo de cálculo}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{block}{}
@@ -420,7 +420,7 @@ Calcule la hora solar real correspondiente al día 23 de Abril de 2010
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org1a676c8}]{Solución}
+\begin{frame}[label={sec:orgdee86be}]{Solución}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{itemize}[<+->]
@@ -439,8 +439,8 @@ oficial.
 \end{frame}
 
 \section{Geometría de los sistemas fotovoltaicos}
-\label{sec:org4bdc34f}
-\begin{frame}[label={sec:orgadd017e}]{Definiciones}
+\label{sec:org760b1f6}
+\begin{frame}[label={sec:org806bf8b}]{Definiciones}
 \begin{itemize}
 \item \(\theta_s\), ángulo de incidencia (AOI), ángulo entre los rayos solares y la perpendicular al plano del generador.
 \item \(\alpha\): orientación del generador (0º cuando está orientado al mediodía solar)
@@ -449,15 +449,15 @@ oficial.
 \end{frame}
 
 \subsection{Sistema Estático}
-\label{sec:org0bbe959}
+\label{sec:orgb6d1540}
 
-\begin{frame}[label={sec:org0b81b8d}]{Sistema Estático}
+\begin{frame}[label={sec:org516831b}]{Sistema Estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EstructuraEstaticaSuelo.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[plain,label={sec:org272b0b0}]{Ángulo de Incidencia}
+\begin{frame}[plain,label={sec:orgb73e5c2}]{Ángulo de Incidencia}
 \begin{itemize}
 \item Si \(\alpha=0\)
 \end{itemize}
@@ -474,7 +474,7 @@ oficial.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org747fe0a}]{Ángulo de Incidencia}
+\begin{frame}[label={sec:orgc9ee874}]{Ángulo de Incidencia}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -485,9 +485,9 @@ oficial.
 
 
 \subsection{Sistemas con seguimiento}
-\label{sec:org76d0b0b}
+\label{sec:org5fb5e81}
 
-\begin{frame}[label={sec:orgee12233}]{Introducción}
+\begin{frame}[label={sec:org16ee2f4}]{Introducción}
 \begin{itemize}[<+->]
 \item \alert{Fundamento:}
 \begin{itemize}[<.->]
@@ -506,7 +506,7 @@ oficial.
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orga7ad622}]{Algunos tipos de seguimiento solar}
+\begin{frame}[label={sec:org6e6bed2}]{Algunos tipos de seguimiento solar}
 \begin{itemize}[<+->]
 \item \alert{Doble eje}
 \begin{itemize}[<.->]
@@ -534,14 +534,14 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org9f9eb5e}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
+\begin{frame}[label={sec:org1af57ad}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorEjeHorizontal.jpg}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[plain,label={sec:org2cd6ec0}]{Ángulo de Incidencia (1x eje, horizontal N-S)}
+\begin{frame}[plain,label={sec:org34c4353}]{Ángulo de Incidencia (1x eje, horizontal N-S)}
 \[\cos(\theta_{s})=\cos(\delta)\sqrt{\sin^{2}(\omega)+\left(\cos(\omega)\cos(\phi)+\tan(\delta)\sin(\phi)\right)^{2}}\]
 
 \begin{center}
@@ -549,7 +549,7 @@ necesarios),
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgae3cd51}]{Inclinación de Eje Horizontal N-S}
+\begin{frame}[label={sec:org7328c5a}]{Inclinación de Eje Horizontal N-S}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -560,7 +560,7 @@ necesarios),
 
 
 
-\begin{frame}[label={sec:org3b3e1ed}]{Ángulo de Incidencia de Eje Horizontal N-S}
+\begin{frame}[label={sec:org762bc22}]{Ángulo de Incidencia de Eje Horizontal N-S}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -572,13 +572,13 @@ necesarios),
 
 
 
-\begin{frame}[label={sec:org0a10378}]{Sistema de Seguimiento (2x ejes)}
+\begin{frame}[label={sec:org4525295}]{Sistema de Seguimiento (2x ejes)}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorReocin.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[plain,label={sec:org32114ca}]{Ángulo de Incidencia (seguidor 2x)}
+\begin{frame}[plain,label={sec:org1e5ef37}]{Ángulo de Incidencia (seguidor 2x)}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Sombra2X.pdf}
 \end{center}
@@ -590,7 +590,7 @@ necesarios),
   \cos(\theta_{s}) &= 1
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:org61a811e}]{Inclinación (seguidor 2x)}
+\begin{frame}[label={sec:org209b0fc}]{Inclinación (seguidor 2x)}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -599,7 +599,7 @@ necesarios),
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf57cfb6}]{Ejercicio: cálculo de ángulo de incidencia}
+\begin{frame}[label={sec:orgc4a8ad9}]{Ejercicio: cálculo de ángulo de incidencia}
 \begin{description}
 \item[{Para:}] \begin{itemize}
 \item Un sistema estático orientado al Sur y con inclinación de 30;
@@ -621,8 +621,8 @@ necesarios),
 \end{description}
 \end{frame}
 \section{Radiación Solar en la Superficie Terrestre}
-\label{sec:org92d06d5}
-\begin{frame}[label={sec:orgbd69fae}]{Irradiancia e Irradiación}
+\label{sec:org4c0c065}
+\begin{frame}[label={sec:orgdf3889c}]{Irradiancia e Irradiación}
 \begin{description}
 \item[{Irradiancia}] es la densidad de \emph{potencia} de radiacion solar
 incidente en una superficie.
@@ -641,10 +641,10 @@ incidente en una superficie.
 \end{frame}
 
 \subsection{Radiación Extra-atmosférica}
-\label{sec:org45b060d}
+\label{sec:org31ee68c}
 
 
-\begin{frame}[label={sec:org1feebc2}]{Definición}
+\begin{frame}[label={sec:org46982c0}]{Definición}
 \begin{itemize}
 \item La radiación que alcanza la superficie de la atmósfera es radiación
 directa del Sol.
@@ -656,7 +656,7 @@ directa del Sol.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgd6cc47c}]{Ecuaciones}
+\begin{frame}[label={sec:org3e54d97}]{Ecuaciones}
 \begin{itemize}
 \item \alert{Constante solar} \(B_{0}=\SI{1367}{\watt\per\meter\squared}\)
 (irradiancia solar sobre la superficie normal al vector solar en límite superior de la atmósfera terrestre)
@@ -676,7 +676,7 @@ directa del Sol.
 \end{frame}
 
 
-\begin{frame}[label={sec:org304e9b6}]{Días promedio}
+\begin{frame}[label={sec:org5ec86f4}]{Días promedio}
 \begin{itemize}
 \item Es posible demostrar que el \alert{promedio mensual} de esta irradiación
 diaria \alert{coincide numericamente} con el valor de irradiación diaria
@@ -706,9 +706,14 @@ Mes & Jul & Ago & Sep & Oct & Nov & Dic\\
 \end{frame}
 
 \subsection{Radiación solar en la superficie terrestre}
-\label{sec:org7b96534}
+\label{sec:org5824925}
+\begin{frame}[label={sec:orga71b8c6}]{}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/ProcedimientoCalculoRadiacionInclinada_G0.pdf}
+\end{center}
+\end{frame}
 
-\begin{frame}[label={sec:org17495b2}]{Interacción de la radiación con la atmósfera}
+\begin{frame}[label={sec:org64b7e20}]{Interacción de la radiación con la atmósfera}
 \begin{itemize}
 \item \alert{Disminución} de la radiación incidente en la superficie terrestre
 (reflexión en nubes)
@@ -721,7 +726,7 @@ partículas)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1b88f72}]{Caracterización de la atmósfera}
+\begin{frame}[label={sec:org5ccb70f}]{Caracterización de la atmósfera}
 \begin{itemize}
 \item \alert{Masa de aire}:
 
@@ -746,7 +751,7 @@ movimiento aparente del sol}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8345c68}]{Índice de claridad}
+\begin{frame}[label={sec:orgb00cafb}]{Índice de claridad}
 \begin{description}
 \item[{\(K_{T}\):}] índice de claridad instantáneo. \(K_{T}=G/B_{0}\)
 
@@ -758,7 +763,7 @@ movimiento aparente del sol}.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orgb48f574}]{Componentes de la radiación solar}
+\begin{frame}[label={sec:orga59d6c7}]{Componentes de la radiación solar}
 \begin{itemize}
 \item \alert{Radiación Directa}. (B)
 
@@ -786,7 +791,7 @@ movimiento aparente del sol}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0231ca1}]{Cómo se escribe}
+\begin{frame}[label={sec:org717611c}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \begin{description}
 \item[{Forma+Tiempo+Lugar:}] Irradiancia directa (forma) horaria (tiempo)
@@ -806,7 +811,7 @@ en el plano del generador (lugar)
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org1aeec4c}]{Cómo se escribe}
+\begin{frame}[label={sec:org9cb68da}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \[Forma_{tiempo,promedio}(lugar)\]
 
@@ -820,15 +825,15 @@ en el plano del generador (lugar)
 \end{block}
 \end{frame}
 \subsection{Cálculo de componentes de radiación solar}
-\label{sec:org66d2ff3}
+\label{sec:org652a41f}
 
-\begin{frame}[label={sec:org026a32d}]{}
+\begin{frame}[label={sec:orga70d9f0}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/ProcedimientoCalculoRadiacionInclinada_componentes.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org96f36b5}]{Estimación de Directa y Difusa}
+\begin{frame}[label={sec:org878bf82}]{Estimación de Directa y Difusa}
 \begin{itemize}
 \item Objetivo: Establecer una \alert{relación entre la fracción difusa} de la radiación horizontal (\(F_{D}=\frac{D(0)}{G(0)}\)) y \alert{el índice de claridad}.
 
@@ -838,7 +843,7 @@ en el plano del generador (lugar)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgbcefb27}]{Correlaciones \(F_{D}\) y \(K_{T}\): Ecuación de Page}
+\begin{frame}[label={sec:org3bd63e8}]{Correlaciones \(F_{D}\) y \(K_{T}\): Ecuación de Page}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/FdKtMensual.pdf}
 \end{center}
@@ -846,7 +851,7 @@ en el plano del generador (lugar)
 \[F_{Dm}=1-1.13\cdot K_{Tm}\]
 \end{frame}
 
-\begin{frame}[label={sec:org52c8d85}]{Correlaciones \(F_{D}\) y \(K_{T}\)}
+\begin{frame}[label={sec:org7c37bfa}]{Correlaciones \(F_{D}\) y \(K_{T}\)}
 Ejemplo: en un lugar con \(G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}\) en un mes con \(B_{o,dm}(0) = \SI{4320}{\watthour\per\meter\squared}\)  será:
 
 \begin{itemize}
@@ -860,7 +865,7 @@ Ejemplo: en un lugar con \(G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}\)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4656096}]{Correlaciones \(F_{D}\) y \(K_{T}\): Collares-Pereira y Rabl}
+\begin{frame}[label={sec:org32f3d08}]{Correlaciones \(F_{D}\) y \(K_{T}\): Collares-Pereira y Rabl}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/FdKtDiario.pdf}
 \end{center}
@@ -874,7 +879,7 @@ F_{Dd} = \begin{cases}
 {\scriptsize \par}
 \end{frame}
 
-\begin{frame}[label={sec:org514be12}]{Ejemplo}
+\begin{frame}[label={sec:org27b5a7b}]{Ejemplo}
 \begin{description}
 \item[{Calcular}] las componentes directa y difusa de la radiación solar del:
 
@@ -885,12 +890,12 @@ F_{Dd} = \begin{cases}
 \end{description}
 \end{frame}
 \section{Radiación Solar en Generadores FV}
-\label{sec:org596a568}
+\label{sec:org733b91f}
 
 \subsection{Introducción}
-\label{sec:org93b0dda}
+\label{sec:org19b9da8}
 
-\begin{frame}[label={sec:orgf067128}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:orga91fccf}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un ángulo de inclinación positivo para maximizar el rendimiento.
 \item Este ángulo depende de la latitud del lugar y de la aplicación del sistema.
@@ -901,16 +906,16 @@ F_{Dd} = \begin{cases}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org0d2d0bd}]{}
+
+\subsection{Irradiancia a partir de irradiación diaria}
+\label{sec:orga6516e7}
+\begin{frame}[label={sec:orgdcca009}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/ProcedimientoCalculoRadiacionInclinada_perfil.pdf}
 \end{center}
 \end{frame}
 
-\subsection{Irradiancia a partir de irradiación diaria}
-\label{sec:orge82f238}
-
-\begin{frame}[label={sec:org4f3937f}]{Planteamiento}
+\begin{frame}[label={sec:org604ae53}]{Planteamiento}
 \begin{itemize}
 \item \alert{Objetivo}: construir un perfil diario promedio de irradiancia global e irradiancia difusa (\emph{cielo claro})
 \item \alert{Puntos clave}:
@@ -925,13 +930,13 @@ F_{Dd} = \begin{cases}
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org165fb82}]{Perfil}
+\begin{frame}[label={sec:org5bc3626}]{Perfil}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RgRd.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgccd20a9}]{Ecuaciones del perfil}
+\begin{frame}[label={sec:org63ef3ee}]{Ecuaciones del perfil}
 \[r_{D}=\frac{D(0)}{D_{d}(0)}=\frac{B_{o}(0)}{B_{0d}(0)}\]
 
 \[r_{G}=\frac{G(0)}{G_{d}(0)}=r_{D}\cdot\left(a+b\cdot\cos(\omega)\right)\]
@@ -941,7 +946,7 @@ F_{Dd} = \begin{cases}
 \[b=0.6609+0.4767\cdot\sin(\omega_{s}+\frac{\pi}{3})\]
 \end{frame}
 
-\begin{frame}[label={sec:org2918de6}]{Ejercicio}
+\begin{frame}[label={sec:org6e37cef}]{Ejercicio}
 \begin{description}
 \item[{Calcular}] la irradiancia global y la irradiancia difusa en el plano horizontal
 
@@ -952,28 +957,28 @@ F_{Dd} = \begin{cases}
 \end{frame}
 
 \subsection{Transformación al plano del generador}
-\label{sec:orga25a0ae}
+\label{sec:org07baee9}
 
-\begin{frame}[label={sec:orgeddb0ee}]{}
+\begin{frame}[label={sec:orgd955979}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/ProcedimientoCalculoRadiacionInclinada_inclinada.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf2acab5}]{Planteamiento}
+\begin{frame}[label={sec:org96710da}]{Planteamiento}
 \begin{itemize}
 \item \alert{Irradiancia Directa}: ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
 \item \alert{Irradiancia Difusa}: modelos del estado de cielo, modelo isotrópico o anisotrópico.
 \item \alert{Irradiancia de Albedo}: modelo isotrópico con coeficiente de reflexión típico.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgcc81ea2}]{Irradiancia Directa}
+\begin{frame}[label={sec:org467e17c}]{Irradiancia Directa}
 \alert{Irradiancia Directa}: ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
 
 \[B(\beta,\alpha)=B(0)\cdot\frac{\max(0,\cos(\theta_{s}))}{\cos(\theta_{zs})}\]
 \end{frame}
 
-\begin{frame}[label={sec:org51cf50f}]{Irradiancia Difusa}
+\begin{frame}[label={sec:org805293a}]{Irradiancia Difusa}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -981,7 +986,7 @@ F_{Dd} = \begin{cases}
 \[D(\beta,\alpha)=\intop_{\Omega}L(\theta_{z},\psi)\cdot\cos(\theta_{z}^{'})d\Omega\]
 \end{frame}
 
-\begin{frame}[label={sec:orgb346ba4}]{Irradiancia Difusa Isotrópica}
+\begin{frame}[label={sec:orgd4abc68}]{Irradiancia Difusa Isotrópica}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -991,7 +996,7 @@ F_{Dd} = \begin{cases}
 
 \[D(\beta,\alpha)=D(0)\cdot\frac{1+\cos(\beta)}{2}\]
 \end{frame}
-\begin{frame}[label={sec:orgbca189e}]{Irradiancia Difusa Anisotrópica}
+\begin{frame}[label={sec:org631e411}]{Irradiancia Difusa Anisotrópica}
 \[D(\beta,\alpha) = D^{I}(\beta,\alpha)+D^{C}(\beta,\alpha)\]
 
 \[D^{I}(\beta,\alpha) = D(0) \cdot (1-k_{1}) \cdot \frac{1 + \cos(\beta)}{2}\]
@@ -1001,7 +1006,7 @@ F_{Dd} = \begin{cases}
 \[k_{1} = \frac{B(0)}{B_{0}(0)}\]
 \end{frame}
 
-\begin{frame}[label={sec:org0288a6c}]{Irradiancia de Albedo}
+\begin{frame}[label={sec:org1786bb0}]{Irradiancia de Albedo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1012,7 +1017,7 @@ F_{Dd} = \begin{cases}
 \[\rho=0.2\]
 \end{frame}
 
-\begin{frame}[label={sec:org089f84e}]{Ejercicio}
+\begin{frame}[label={sec:org55d75c0}]{Ejercicio}
 \begin{description}
 \item[{Calcular}] la irradiancia difusa, directa, de albedo y global, en
 
@@ -1023,15 +1028,15 @@ F_{Dd} = \begin{cases}
 \end{frame}
 
 \subsection{Pérdidas angulares y por suciedad}
-\label{sec:org53a3faa}
+\label{sec:org67d8b41}
 
-\begin{frame}[label={sec:orgb9ce75b}]{}
+\begin{frame}[label={sec:org982d70c}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/ProcedimientoCalculoRadiacionInclinada_efectiva.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org9783dbf}]{Radiación directa}
+\begin{frame}[label={sec:orgbd50fea}]{Radiación directa}
 \[B_{ef}(\beta,\alpha)=B(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot (1-FT_{B}(\theta_{s}))\]
 
 \begin{center}
@@ -1039,36 +1044,23 @@ F_{Dd} = \begin{cases}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org3ebeecf}]{Difusa y Albedo}
+\begin{frame}[label={sec:org007e09c}]{Difusa y Albedo}
 \begin{align*}
 D_{ef}^{iso}(\beta,\alpha) &= D^{iso}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{D}(\beta))\\
 D_{ef}^{cir}(\beta,\alpha) &= D^{cir}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{B}(\theta_{s}))\\
 R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{R}(\beta))
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:org1340bbf}]{Coeficientes}
-\begin{center}
-\begin{tabular}{lrrr}
-Grado de Suciedad & \(\frac{T_{sucio}(0)}{T_{limpio}(0)}\) & \(a_{r}\) & \(c_{2}\)\\
-\hline
-Limpio & 1 & 0.17 & -0.069\\
-Bajo & 0.98 & 0.20 & -0.054\\
-Medio & 0.97 & 0.21 & -0.049\\
-Alto & 0.92 & 0.27 & -0.023\\
-\end{tabular}
-\end{center}
-\end{frame}
-
-\begin{frame}[label={sec:orgfffaa37}]{Pérdidas anuales}
+\begin{frame}[label={sec:org29d0c4a}]{Pérdidas anuales}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/GefVSG.pdf}
 \end{center}
 \end{frame}
 
 \subsection{Radiación Efectiva según tipologías}
-\label{sec:org98fb00b}
+\label{sec:orga6e12a0}
 
-\begin{frame}[label={sec:orgdd5b35e}]{Radiación en Sistema estático}
+\begin{frame}[label={sec:org8a20263}]{Radiación en Sistema estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/FixedKrig.pdf}
 \end{center}
@@ -1076,7 +1068,7 @@ Alto & 0.92 & 0.27 & -0.023\\
 
 
 
-\begin{frame}[label={sec:orgec6f568}]{Radiación en Seguimiento Eje Horizontal}
+\begin{frame}[label={sec:org4fad35c}]{Radiación en Seguimiento Eje Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizKrig.pdf}
 \end{center}
@@ -1084,14 +1076,14 @@ Alto & 0.92 & 0.27 & -0.023\\
 
 
 
-\begin{frame}[label={sec:orgbd660ba}]{Radiación en Seguimiento Doble Eje}
+\begin{frame}[label={sec:org6cf250a}]{Radiación en Seguimiento Doble Eje}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoKrig.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org6acb77c}]{Comparación Doble Eje-Estática}
+\begin{frame}[label={sec:org6638c78}]{Comparación Doble Eje-Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoFixed.pdf}
 \end{center}
@@ -1099,7 +1091,7 @@ Alto & 0.92 & 0.27 & -0.023\\
 
 
 
-\begin{frame}[label={sec:org98958ea}]{Comparación Doble Eje - Horizontal}
+\begin{frame}[label={sec:org3d57692}]{Comparación Doble Eje - Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoHoriz.pdf}
 \end{center}
@@ -1107,7 +1099,7 @@ Alto & 0.92 & 0.27 & -0.023\\
 
 
 
-\begin{frame}[label={sec:orgc7e6cb9}]{Comparación Eje Horizontal - Estática}
+\begin{frame}[label={sec:orge0e8afd}]{Comparación Eje Horizontal - Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizFixed.pdf}
 \end{center}
@@ -1115,22 +1107,22 @@ Alto & 0.92 & 0.27 & -0.023\\
 
 
 
-\begin{frame}[label={sec:org7706ff3}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:org0529017}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/compSystems.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org3083682}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:orga3db9fb}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/compSystemsG0.png}
 \end{center}
 \end{frame}
 \section{Bases de Datos}
-\label{sec:org2e47b83}
+\label{sec:org6fca0e0}
 \subsection{Introducción}
-\label{sec:orgbce8c1b}
-\begin{frame}[label={sec:org1f638bb}]{Variabilidad Solar}
+\label{sec:org6c4c4b6}
+\begin{frame}[label={sec:org416532f}]{Variabilidad Solar}
 \begin{itemize}
 \item La \alert{radiación extra-atmosférica} se puede expresar de forma \alert{analítica} en función del día, hora y latitud.
 \item La \alert{radiación en la superficie terrestre} es un \alert{proceso estocástico} (aleatorio) debido a la interacción con la atmósfera.
@@ -1140,7 +1132,7 @@ Alto & 0.92 & 0.27 & -0.023\\
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org26dfb4e}]{Estimaciones a Largo Plazo}
+\begin{frame}[label={sec:org2773e08}]{Estimaciones a Largo Plazo}
 \begin{itemize}
 \item Nos interesan \alert{estimaciones a largo plazo} del funcionamiento de los sistemas FV en una localización concreta.
 \item Las fuentes de datos de radiación solar deben:
@@ -1151,7 +1143,7 @@ Alto & 0.92 & 0.27 & -0.023\\
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb01b294}]{Variabilidad Temporal}
+\begin{frame}[label={sec:org018b931}]{Variabilidad Temporal}
 \begin{center}
 \includegraphics[height=0.45\textheight]{../figs/VariabilidadRadiacionDiario.pdf}
 \end{center}
@@ -1163,7 +1155,7 @@ Alto & 0.92 & 0.27 & -0.023\\
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb14a5fb}]{Variabilidad Espacial}
+\begin{frame}[label={sec:org8000d8e}]{Variabilidad Espacial}
 \begin{center}
 \includegraphics[height=0.4\textheight]{../figs/SpatialVariability.jpg}
 \end{center}
@@ -1175,7 +1167,7 @@ Alto & 0.92 & 0.27 & -0.023\\
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org29f0cd7}]{Resumen}
+\begin{frame}[label={sec:org0987593}]{Resumen}
 \begin{block}{Requerimientos}
 Una estimación de la productividad de un SFV confiable y representativa en el largo plazo requiere:
 \begin{itemize}
@@ -1186,8 +1178,8 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Fuentes de Datos}
-\label{sec:org7ac1588}
-\begin{frame}[label={sec:orgfa6a70a}]{Estaciones Meteorológicas}
+\label{sec:org13f706e}
+\begin{frame}[label={sec:orga5e1933}]{Estaciones Meteorológicas}
 \begin{itemize}
 \item Series temporales largas
 \item Alta resolución temporal (\(\SI{1}{\min}\))
@@ -1205,7 +1197,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 
-\begin{frame}[label={sec:org5df10b3}]{Imágenes de Satelite}
+\begin{frame}[label={sec:org77b81c4}]{Imágenes de Satelite}
 \begin{itemize}
 \item Baja resolución temporal (\(\SI{1}{hora}\)).
 
@@ -1218,7 +1210,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 
-\begin{frame}[label={sec:org489f768}]{Métodos Híbridos}
+\begin{frame}[label={sec:orgbcbdfa7}]{Métodos Híbridos}
 \begin{itemize}
 \item Las medidas terrestres se mezclan con las estimaciones de satélite para mejorar la resolución espacial.
 \item Interpolación Espacial.
@@ -1237,7 +1229,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd165912}]{Fuentes de Datos}
+\begin{frame}[label={sec:orgd76e235}]{Fuentes de Datos}
 \url{https://github.com/oscarperpinan/mds/wiki}
 
 \begin{itemize}
@@ -1258,8 +1250,8 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Control de Calidad}
-\label{sec:orge992522}
-\begin{frame}[label={sec:org7cc2619}]{Introducción}
+\label{sec:org7079e75}
+\begin{frame}[label={sec:org1290ed9}]{Introducción}
 \begin{itemize}
 \item Es necesario filtrar y corregir las medidas para eliminar datos erróneos y valores extremos.
 \begin{itemize}
@@ -1270,7 +1262,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge6ff8f0}]{Límites Físicos}
+\begin{frame}[label={sec:orged9d14a}]{Límites Físicos}
 \begin{itemize}
 \item El índice de claridad no puede ser mayor que 1 (la irradiación global diaria no puede superar la extra-atmosférica).
 \end{itemize}
@@ -1290,14 +1282,14 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgd8cf720}]{Coherencia Espacial}
+\begin{frame}[label={sec:org7623b58}]{Coherencia Espacial}
 \begin{itemize}
 \item Las medidas de una estación se deben comparar con \alert{estaciones cercanas} (por ejemplo, mediante interpolación espacial).
 \item La comparación se debe realizar con \alert{valores agregados} (medias diarias o mensuales).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org220e4f3}]{Análisis Estadístico de las Desviaciones}
+\begin{frame}[label={sec:org7f70c03}]{Análisis Estadístico de las Desviaciones}
 \begin{itemize}
 \item Desviaciones, \(\mathbf{D}\), entre observaciones, \(\mathbf{O}\), y un modelo, \(\mathbf{M}\) (u otro conjunto de observaciones):
 \end{itemize}
@@ -1315,7 +1307,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgc116573}]{Métricas}
+\begin{frame}[label={sec:org0a00652}]{Métricas}
 \begin{itemize}
 \item Mean Bias Difference (MBD), diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
