--- a/scripts/tikz/ProcedimientoCalculoRadiacionInclinada.tex
+++ b/scripts/tikz/ProcedimientoCalculoRadiacionInclinada.tex
@@ -1,5 +1,5 @@
 \documentclass{standalone}
-
+\usepackage{mathpazo}
 \usepackage{tikz}
 \usetikzlibrary{shapes}
 \begin{document}
@@ -42,12 +42,31 @@
       G_{efd}(\beta,\alpha)
     \end{array}$};
 
-  \draw[->] (Gd) -- (Dd);
-  \draw[->] (Dd) -- (G);
-  \draw[->] (G) -- (Inclin);
-  \draw[->] (Inclin) -- (Inclind);
-  \draw[->] (Inclin) -- (Eff);
-  \draw[->] (Eff) -- (Effd);
+  \draw[->] (Gd) -- (Dd) node[midway, right] {$
+    \begin{array}{c}
+      B_{od}(0)\\
+      K_T\\
+      F_D
+    \end{array}$};
+  \draw[->] (Dd) -- (G) node[midway, right] {$
+    \begin{array}{c}
+      B_o(0)\\
+      r_D\\
+      r_G
+    \end{array}$};
+  \draw[->] (G) -- (Inclin) node[midway, below] {$
+    \begin{array}{c}
+      \cos(\theta_{zs})\\
+      \cos(\theta_s)
+    \end{array}$};
+  \draw[->] (Inclin) -- (Inclind) node[midway, below] {$\sum$};
+  \draw[->] (Inclin) -- (Eff) node[midway, right] {$
+    \begin{array}{c}
+      \frac{T_{\mathrm{sucio}}(0)}{T_{\mathrm{limpio}}(0)}\\
+      FT_D\\
+      FT_B
+    \end{array}$};
+  \draw[->] (Eff) -- (Effd) node[midway, above] {$\sum$};
 \end{tikzpicture}
 
 \end{document}
